logs/djangae.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/djangae'...
Listing './lib/python3.5/site-packages/djangae/contrib'...
Listing './lib/python3.5/site-packages/djangae/contrib/common'...
Listing './lib/python3.5/site-packages/djangae/contrib/consistency'...
Listing './lib/python3.5/site-packages/djangae/contrib/contenttypes'...
Listing './lib/python3.5/site-packages/djangae/contrib/contenttypes/migrations'...
Listing './lib/python3.5/site-packages/djangae/contrib/gauth'...
Listing './lib/python3.5/site-packages/djangae/contrib/gauth/common'...
Listing './lib/python3.5/site-packages/djangae/contrib/gauth_datastore'...
Listing './lib/python3.5/site-packages/djangae/contrib/gauth_sql'...
Listing './lib/python3.5/site-packages/djangae/contrib/gauth_sql/migrations'...
Listing './lib/python3.5/site-packages/djangae/contrib/locking'...
Listing './lib/python3.5/site-packages/djangae/contrib/mappers'...
Listing './lib/python3.5/site-packages/djangae/contrib/pagination'...
Listing './lib/python3.5/site-packages/djangae/contrib/processing'...
Listing './lib/python3.5/site-packages/djangae/contrib/processing/mapreduce'...
Listing './lib/python3.5/site-packages/djangae/contrib/processing/mapreduce/tests'...
Listing './lib/python3.5/site-packages/djangae/contrib/security'...
Listing './lib/python3.5/site-packages/djangae/contrib/security/management'...
Listing './lib/python3.5/site-packages/djangae/contrib/security/management/commands'...
Listing './lib/python3.5/site-packages/djangae/contrib/uniquetool'...
Listing './lib/python3.5/site-packages/djangae/contrib/uniquetool/templates'...
Listing './lib/python3.5/site-packages/djangae/contrib/uniquetool/templates/admin'...
Listing './lib/python3.5/site-packages/djangae/core'...
Listing './lib/python3.5/site-packages/djangae/core/management'...
Compiling './lib/python3.5/site-packages/djangae/crc64.py'...
***   File "./lib/python3.5/site-packages/djangae/crc64.py", line 162
    return self.crc ^0L
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djangae/db'...
Listing './lib/python3.5/site-packages/djangae/db/backends'...
Listing './lib/python3.5/site-packages/djangae/db/backends/appengine'...
Listing './lib/python3.5/site-packages/djangae/db/backends/appengine/parsers'...
Listing './lib/python3.5/site-packages/djangae/db/migrations'...
Compiling './lib/python3.5/site-packages/djangae/db/migrations/utils.py'...
***   File "./lib/python3.5/site-packages/djangae/db/migrations/utils.py", line 20
    except _catch, e:
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djangae/fields'...
Listing './lib/python3.5/site-packages/djangae/forms'...
Listing './lib/python3.5/site-packages/djangae/lib'...
Listing './lib/python3.5/site-packages/djangae/management'...
Listing './lib/python3.5/site-packages/djangae/management/commands'...
Listing './lib/python3.5/site-packages/djangae/patches'...
Listing './lib/python3.5/site-packages/djangae/templatetags'...
Listing './lib/python3.5/site-packages/djangae/tests'...
Compiling './lib/python3.5/site-packages/djangae/tests/test_db_fields.py'...
***   File "./lib/python3.5/site-packages/djangae/tests/test_db_fields.py", line 455
    set_field_int={123L},
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/djangae/tests/test_indexing.py'...
***   File "./lib/python3.5/site-packages/djangae/tests/test_indexing.py", line 47
    print len(datastore_query.calls)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djangae-0.9.10.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
